<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer">Transfer</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="note">Note</string>
    <string name="channel_name">Channel name</string>

    <string-array name="accountTypes">
        <item>Cash</item>
        <item>Card</item>
        <item>Bank account</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="shortMonths">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="tabs">
        <item>Month expense</item>
        <item>Month income</item>
        <item>Expense trend</item>
        <item>Income trend</item>

    </string-array>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="reload">Reload</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
</resources>